...
            "value": "Mediathek"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
          }
        }
      }
    },
    "collections.trash": {
      "extractionState": "manual",
...
            "value": "Proton-Konto und Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Proton Account and Settings"
          }
        }
      }
    },
    "library.options": {
      "extractionState": "manual",
...
            "value": "Suchen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
          }
        }
      }
    },
    "tab.settings": {
      "extractionState": "manual",
...
            "value": "Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        }
      }
    },
    "viewer.close_a11y": {
      "extractionState": "manual",
...
